Remove unnecessary details

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <div class="page-container">
         <div class="content-wrapper">
             <article class="markdown-body">
-                <h1>Andras' Wiki - Shared Pages</h1>
+                <h1>AP's Wiki - Shared Pages</h1>
                 
                 <p>Welcome to my collection of shared wiki pages! These are selected articles and notes from my personal wiki, exported for public viewing.</p>
 
@@ -245,10 +245,6 @@
                         <div class="page-title">Software in the Era of AI</div>
                         <div class="page-meta">Andrej Karpathy's insights on the three paradigms of software development</div>
                     </a>
-                </div>
-
-                <div class="add-pages">
-                    <strong>Adding more pages:</strong> New exported wiki pages will automatically appear here when added to the <code>content/</code> directory. Simply export pages from your private wiki and place them in this repository.
                 </div>
             </article>
         </div>
