Update link in index

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 
                 <div class="page-list" id="page-list">
                     <!-- Pages will be dynamically inserted here -->
-                    <a href="content/test.html" class="page-item">
+                    <a href="content/andrej-karpathy-software-in-the-ai-era.html" class="page-item">
                         <div class="page-title">Software in the Era of AI</div>
                         <div class="page-meta">Andrej Karpathy's insights on the three paradigms of software development</div>
                     </a>
