--- a/content/andrej-karpathy-software-in-the-ai-era.html
+++ b/content/andrej-karpathy-software-in-the-ai-era.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta property="og:title" content="Software in the Era of AI" />
 <meta property="og:image" content="https://i.ytimg.com/vi/LCEmiRjPEtQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLCdR9R2QKWNR_TPysdq4kS6cgqhKA" />
 <meta property="og:image:secure_url" content="hhttps://i.ytimg.com/vi/LCEmiRjPEtQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLCdR9R2QKWNR_TPysdq4kS6cgqhKA" />
 <meta property="og:image:type" content="image/jpeg" />
