--- a/content/andrej-karpathy-software-in-the-ai-era.html
+++ b/content/andrej-karpathy-software-in-the-ai-era.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta property="og:title" content="Software in the Era of AI" />
-<meta property="og:image" content="https://i.ytimg.com/vi/LCEmiRjPEtQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLCdR9R2QKWNR_TPysdq4kS6cgqhKA" />
-<meta property="og:image:secure_url" content="https://i.ytimg.com/vi/LCEmiRjPEtQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLCdR9R2QKWNR_TPysdq4kS6cgqhKA" />
+<meta property="og:image" content="../images/andrej-karpathy-software-in-the-ai-era.jpg" />
+<meta property="og:image:secure_url" content="../images/andrej-karpathy-software-in-the-ai-era.jpg" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -532,7 +532,7 @@ pre {
 <article class="markdown-body">
 <h1>Software in the Era of AI</h1>
 <p>Youtube: <a href="https://www.youtube.com/watch?v=LCEmiRjPEtQ">https://www.youtube.com/watch?v=LCEmiRjPEtQ</a></p>
-<p><img alt="Video Thumbnail" src="https://i.ytimg.com/vi/LCEmiRjPEtQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLCdR9R2QKWNR_TPysdq4kS6cgqhKA"/></p>
+<p><img alt="Video Thumbnail" src="../images/andrej-karpathy-software-in-the-ai-era.jpg"/></p>
 <p>Andrej Karpathy argues that software is undergoing its most fundamental shift in decades. We are moving from manually written code to a new paradigm where software is created through different means.</p>
 <h2>Talk Outline</h2>
 <ul>
