Locally hosted image css adjustments

--- a/content/andrej-karpathy-software-in-the-ai-era.html
+++ b/content/andrej-karpathy-software-in-the-ai-era.html
@@ -158,6 +158,13 @@
             font-weight: 600;
             background-color: #f6f8fa;
         }
+        
+        .markdown-body img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
         </style><style>/* Pygments 'one-dark' style CSS */
 pre { 
     line-height: 125%; 
