--- a/content/andrej-karpathy-software-in-the-ai-era.html
+++ b/content/andrej-karpathy-software-in-the-ai-era.html
@@ -4,6 +4,12 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta property="og:title" content="Software in the Era of AI" />
+<meta property="og:image" content="../images/andrej-karpathy-software-in-the-ai-era.jpg" />
+<meta property="og:image:secure_url" content="../images/andrej-karpathy-software-in-the-ai-era.jpg" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 <title>Software in the Era of AI - Andras' Wiki</title>
 <link href="/static/manifest.json" rel="manifest"/>
 
