--- a/content/epic-tennis-matches.html
+++ b/content/epic-tennis-matches.html
@@ -4,13 +4,6 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<meta property="og:title" content="Epic Tennis Matches Collection" />
-<meta property="og:description" content="Three legendary tennis matches spanning two decades - from Federer vs Nadal at Wimbledon 2008 to the next generation clash at Roland-Garros 2025" />
-<meta property="og:image" content="https://img.youtube.com/vi/mHsg2M25PzY/maxresdefault.jpg" />
-<meta property="og:image:secure_url" content="https://img.youtube.com/vi/mHsg2M25PzY/maxresdefault.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta property="og:image:width" content="1280" />
-<meta property="og:image:height" content="720" />
 <title>Epic Tennis Matches Collection - Andras' Wiki</title>
 <link href="/static/manifest.json" rel="manifest"/>
 
@@ -472,30 +465,30 @@ pre {
 <hr/>
 <h2>Wimbledon 2008 Final: Roger Federer vs Rafael Nadal</h2>
 <p><a href="https://www.youtube.com/watch?v=mHsg2M25PzY"><img alt="Wimbledon 2008 Final" src="https://img.youtube.com/vi/mHsg2M25PzY/maxresdefault.jpg"/></a></p>
-<p><strong>Match Details:</strong>
-- <strong>Tournament:</strong> Wimbledon Championships 2008
-- <strong>Date:</strong> July 6, 2008
-- <strong>Players:</strong> Roger Federer vs Rafael Nadal
+<p><strong>Match Details:</strong><br/>
+- <strong>Tournament:</strong> Wimbledon Championships 2008<br/>
+- <strong>Date:</strong> July 6, 2008<br/>
+- <strong>Players:</strong> Roger Federer vs Rafael Nadal<br/>
 - <strong>Surface:</strong> Grass</p>
 <p>Widely regarded as one of the greatest tennis matches of all time, this epic Wimbledon final pitted the grass court king Roger Federer against the relentless Rafael Nadal in a battle that would define an era. Federer, seeking his sixth consecutive Wimbledon title and fighting to maintain his number one ranking, faced his greatest rival who had never won on the hallowed lawns of the All England Club. The match showcased contrasting styles - Federer’s elegant precision against Nadal’s devastating power and unwavering determination - in conditions that shifted from bright sunshine to gathering dusk, creating a dramatic backdrop for what many consider the most compelling narrative in tennis history.</p>
 <p><strong><a href="https://www.youtube.com/watch?v=mHsg2M25PzY">Watch the Full Match →</a></strong></p>
 <hr/>
 <h2>Australian Open 2012 Final: Novak Djokovic vs Rafael Nadal</h2>
 <p><a href="https://www.youtube.com/watch?v=xNbXf4-BSSA"><img alt="Australian Open 2012 Final" src="https://img.youtube.com/vi/xNbXf4-BSSA/maxresdefault.jpg"/></a></p>
-<p><strong>Match Details:</strong>
-- <strong>Tournament:</strong> Australian Open 2012
-- <strong>Date:</strong> January 29, 2012
-- <strong>Players:</strong> Novak Djokovic vs Rafael Nadal
+<p><strong>Match Details:</strong><br/>
+- <strong>Tournament:</strong> Australian Open 2012<br/>
+- <strong>Date:</strong> January 29, 2012<br/>
+- <strong>Players:</strong> Novak Djokovic vs Rafael Nadal<br/>
 - <strong>Surface:</strong> Hard Court</p>
 <p>In the scorching Melbourne heat, two titans of tennis faced off in what would become the longest Grand Slam final in Open Era history, lasting nearly six hours of pure athletic theater. World number one Novak Djokovic, defending his Australian Open crown and riding an incredible winning streak, met the indomitable Rafael Nadal in a match that pushed both players to their absolute physical and mental limits. This grueling baseline battle featured incredible shot-making, superhuman endurance, and momentum swings that had the Melbourne crowd witnessing tennis at its most raw and emotionally charged, with both players refusing to yield in what became an instant classic.</p>
 <p><strong><a href="https://www.youtube.com/watch?v=xNbXf4-BSSA">Watch the Full Match →</a></strong></p>
 <hr/>
 <h2>Roland-Garros 2025 Final: Carlos Alcaraz vs Jannik Sinner</h2>
 <p><a href="https://www.youtube.com/watch?v=ckbX699wngs"><img alt="Roland-Garros 2025 Final" src="https://img.youtube.com/vi/ckbX699wngs/maxresdefault.jpg"/></a></p>
-<p><strong>Match Details:</strong>
-- <strong>Tournament:</strong> Roland-Garros 2025
-- <strong>Date:</strong> June 8, 2025
-- <strong>Players:</strong> Carlos Alcaraz vs Jannik Sinner
+<p><strong>Match Details:</strong><br/>
+- <strong>Tournament:</strong> Roland-Garros 2025<br/>
+- <strong>Date:</strong> June 8, 2025<br/>
+- <strong>Players:</strong> Carlos Alcaraz vs Jannik Sinner<br/>
 - <strong>Surface:</strong> Clay</p>
 <p>The changing of the guard in men’s tennis reached its crescendo on the clay courts of Paris, as Carlos Alcaraz and Jannik Sinner, the sport’s two brightest young stars, clashed in a Roland-Garros final that represented the future of the game. This next-generation showdown brought together Alcaraz’s explosive athleticism and creative shot-making with Sinner’s precision power and ice-cool composure, creating a fascinating tactical battle on the red dirt. With both players in their early twenties and already Grand Slam champions, this final promised to be the first of many epic encounters between two players destined to define tennis for the next decade.</p>
 <p><strong><a href="https://www.youtube.com/watch?v=ckbX699wngs">Watch the Full Match →</a></strong></p>
